protocols/tests/adders/adder_d1/add_incorrect.out
error: Thread 0 attempted conflicting assignment to 'a': current=ValueOwned(00000000000000000000000000000001), new=ValueOwned(00000000000000000000000000000100)
   ┌─ adders/adder_d1/add_d1.prot:33:3
   │
33 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 0 attempted conflicting assignment to 'a': current=ValueOwned(00000000000000000000000000000001), new=ValueOwned(00000000000000000000000000000100)

